personal webpage cont'd

--- a/HtmlNew/lesson_04/index.html
+++ b/HtmlNew/lesson_04/index.html
@@ -20,6 +20,17 @@
         background-color: wheat;
         height: 200vh;
       }
+
+      table,
+      th,
+      td,
+      caption {
+        border-width: 1px;
+        border-style: solid;
+        border-color: black;
+        padding: 5px;
+        border-collapse: collapse;
+      }
     </style>
   </head>
   <body>
@@ -140,6 +151,14 @@
                 <td>Sleep</td>
               </tr>
             </tbody>
+            <tfoot>
+              <tr>
+                <td colspan="3">
+                  And that's what I do every day, 5 days a week. Just eat,
+                  sleep, code, and recharge!
+                </td>
+              </tr>
+            </tfoot>
           </table>
         </section>
         <section>
@@ -261,6 +280,45 @@
           </dl>
         </section>
       </article>
+
+      <hr />
+
+      <article id="contact">
+        <h2>Contact Me</h2>
+        <p>I'd really like to hear from you!</p>
+
+        <form>
+          <fieldset>
+            <legend>Personal Info</legend>
+            <p>
+              <label for="firstName">First Name:</label>
+              <input type="text" name="firstName" id="firstName" />
+            </p>
+            <p>
+              <label for="lastName">Last Name:</label>
+              <input type="text" name="lastName" id="lastName" />
+            </p>
+            <p>
+              <label for="password">Password: </label>
+              <input type="password" name="password" id="password" />
+            </p>
+            <p>
+              <label for="phoneNumber">Phone Number:</label>
+              <input
+                type="tel"
+                name="phoneNumber"
+                id="phoneNumber"
+                pattern="[0-9]{3}[0-9]{3}[0-9]{4}"
+              />
+            </p>
+          </fieldset>
+
+          <br />
+
+          <button type="submit">Submit</button>
+          <button type="reset">Reset</button>
+        </form>
+      </article>
     </main>
     <!-- </ul> -->
     <hr />
@@ -279,11 +337,12 @@
 
 <!--
     Tags:
-        - aside
-        - details, summary
-        - table, thead, th, td, tr
+        - form
+        - fieldset, legend
+        - label: name, input: text, password, name, id
+        - button: submit, reset
 
 
     Subjects
-        -
+        - colspan, rowspan
  -->
